# VideoTraffic

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: video_720p_facebook_mix.pcap.Mixed_rseed-22.pcap.FHT.csv  video_720p_facebook_mix.pcap.Mixed_rseed-22.pcap.flow.stat.r_1.s_2222..pulse.csv  video_720p_facebook_mix.pcap.Mixed_rseed-22.pcap.flow.stat.r_1.s_2222.2000.csv  video_720p_facebook_mix.pcap.Mixed_rseed-22.pcap.flow.stat.r_1.s_2222.500.csv  video_720p_facebook_mix.pcap.Mixed_rseed-22.pcap.flow.stat.r_1.s_2222.5000.csv
include/VideoTraffic/: flow_HT.h  video_flows_set.h
include/_TLS/: TLS_tools.h
include/_lib.h/: libBaseSE.h  libFilterSE.h  libFlow2SE.h  libPacketSE.h
src/VideoTraffic/: flow_HT.cpp  main_flow_HT.cpp  main_video_flows.cpp  video_flows_set.cpp
src/_TLS/: TLS_tools.cpp
tools/: requirements.txt
tools/Data_Visualization/: 202006101400.pcap.TCPLen.csv  PLD_Drawn.py  column_chart.py  pck_count.py  plt_zexiantu.py  plt_zexiantu_IO.py  tmGap.py  transformation.py
tools/Randomfrorest/: ITP-KNN.py  MAC_Classification.py  classifier_comparison_report_2000.csv  classifier_comparison_report_3000.csv  classifier_comparison_report_500.csv  classifier_comparison_report_5000.csv  classifier_comparison_report_pulse_-1.csv  classifier_comparison_report_pulse_-1_220112.csv  filter_flows_HT_TLS.py  ipPorthashb_filte.py  keyword_match.py  model compare(5).py  model_predict_test.py  pluse_fatures.py  pr_parm_test.py  pyvenv.cfg  quick_model_predict.py  quick_model_train.py  rf_clf.py  rf_clf_500.py  rf_clf_5000.py  sample_packet_predict.py  select_features.py  silhouette.py
